# api-gatekeeper

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  README.md  ROADMAP.md  build-publish.sh  dev-requirements.txt  docker-compose.example.yml  dot.env.example  example.env  grafana-dashboard.json  mazza.vc_CA.pem  pyproject.toml  pytest.ini  requirements.txt
dev_scripts/: recreate_database.py  setup_database.py  setup_production_test_data.py  verify_schema.py
docs/: ROADMAP.md
nginx/: NGINX_SETUP.md  auth-example.conf  example-site.conf
scripts/: create_client.py  create_route.py  delete_client.py  delete_route.py  grant_permission.py  list_clients.py  list_permissions.py  list_rate_limits.py  list_routes.py  revoke_permission.py  set_rate_limit.py  setup_test_data.py
src/: app.py  monitoring.py  rate_limiter.py
src/auth/: __init__.py  api_key_handler.py  authorizer.py  hmac_handler.py  models.py  nonce_storage.py  request_signer.py
src/blueprints/: __init__.py  authz.py  health.py  metrics.py
src/database/: __init__.py  driver.py  schema.sql
src/models/: __init__.py  client.py  client_permission.py  method_auth.py  rate_limit.py  route.py
src/utils/: __init__.py  db_connection.py
tests/: __init__.py  conftest.py  test_auth_handlers.py  test_authorizer.py  test_client_operations.py  test_database_driver.py  test_flask_app.py  test_nonce_storage.py  test_rate_limiter.py  test_route_model.py
